--- a/index.html
+++ b/index.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
-    <div></div>
+    <nav class="border rounded p-2 d-flex justify-content-center m-3">
+        <a href="https://github.com/A21-null/A21-null.github.io" class="link-light">Source</a>
+    </nav>
+    <div id="horario"></div>
+    <div id="editarAsignaturas">
+        <div id="contenedorCursos" class="d-flex text-center justify-content-center">
+            <div id="primero" class="curso border ">
+                <div class="titulo">Primero</div>
+                <div class="asignatura"><span>Estadistica</span> <input type="checkbox" id="Estadistica"></div>
+            </div>
+            <div id="segundo" class="curso border">
+                <div class="titulo">Segundo</div>
+                <div class="asignatura"><span>Algoritmos y estructuras de datos</span> <input type="checkbox"
+                        id="Estadistica"></div>
+            </div>
+            <div id="tercero" class="curso border">
+                <div class="titulo">Tercero</div>
+                <div class="asignatura"><span>Computación distribuida</span> <input type="checkbox" id="Estadistica">
+                </div>
+            </div>
+            <div id="cuarto" class="curso border">
+                <div class="titulo">Tercero</div>
+                <div class="asignatura"><span>Asignatura de 4º</span> <input type="checkbox" id="Estadistica">
+                </div>
+            </div>
+        </div>
+        <div id="botones" class="d-flex justify-content-center m-2">
+            <button type="button" class="btn btn-danger">Cancelar cambios</button>
+            <button type="button" class="btn btn-success">Aplicar cambios</button>
+        </div>
+
+    </div>
+
+
     <script src="./script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
