--- a/index.html
+++ b/index.html
@@ -12,35 +12,74 @@
 </head>
 
 <body>
-    <nav class="border rounded p-2 d-flex justify-content-center m-3">
-        <a href="https://github.com/A21-null/A21-null.github.io" class="link-light">Source</a>
-    </nav>
-    <div id="horario"></div>
-    <div id="editarAsignaturas">
-        <div id="contenedorCursos" class="d-flex text-center justify-content-center">
-            <div id="primero" class="curso border ">
-                <div class="titulo">Primero</div>
-                <div class="asignatura"><span>Estadistica</span> <input type="checkbox" id="Estadistica"></div>
+    <div id="horario">
+        <div class="container text-center">
+            <div class="row">
+                <div id="L" class="col">Lunes</div>
+                <div id="M" class="col">Martes</div>
+                <div id="X" class="col">Miércoles</div>
+                <div id="J" class="col">Jueves</div>
+                <div id="V" class="col">Viernes</div>
             </div>
-            <div id="segundo" class="curso border">
-                <div class="titulo">Segundo</div>
-                <div class="asignatura"><span>Algoritmos y estructuras de datos</span> <input type="checkbox"
-                        id="Estadistica"></div>
+            <!-- Schedule rows -->
+            <div class="row">
+                <div class="col">09:00</div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
             </div>
-            <div id="tercero" class="curso border">
-                <div class="titulo">Tercero</div>
-                <div class="asignatura"><span>Computación distribuida</span> <input type="checkbox" id="Estadistica">
-                </div>
+            <div class="row">
+                <div class="col">09:30</div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
             </div>
-            <div id="cuarto" class="curso border">
-                <div class="titulo">Tercero</div>
-                <div class="asignatura"><span>Asignatura de 4º</span> <input type="checkbox" id="Estadistica">
-                </div>
+            <!-- Repeat the above block for each 30-minute interval until 21:00 -->
+            <!-- Example for 10:00 -->
+            <div class="row">
+                <div class="col">10:00</div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+                <div class="col"></div>
+            </div>
+            <!-- Continue adding rows for each time interval -->
+        </div>
+
+
+    </div>
+    <div class="border rounded p-2 d-flex justify-content-center m-4">
+        <div class="mb-3 row">
+            <label for="nombre" class="col-sm-2 col-form-label">Nombre</label>
+            <div class="col-sm-10">
+                <input id="nombre" class="form-control" type="text" aria-label="Nombre">
             </div>
         </div>
+        <div class="mb-3 row">
+            <label for="apellidos" class="col-sm-2 col-form-label">Apellidos</label>
+            <div class="col-sm-10">
+                <input class="form-control" id="apellidos" type="text" aria-label="Apellidos">
+            </div>
+        </div>
+    </div>
+    <div id="editarAsignaturas">
+        <div id="contenedorCursos" class="d-flex text-center justify-content-center">
+
+        </div>
         <div id="botones" class="d-flex justify-content-center m-2">
-            <button type="button" class="btn btn-danger">Cancelar cambios</button>
-            <button type="button" class="btn btn-success">Aplicar cambios</button>
+            <button type="button" id="cancelar-datos" class="btn btn-danger">Cancelar cambios</button>
+            <button type="button" id="aplicar-datos" class="btn btn-success">Aplicar cambios</button>
         </div>
 
     </div>
@@ -50,6 +89,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <nav class="border rounded p-2 d-flex justify-content-center m-3">
+        <a href="https://github.com/A21-null/A21-null.github.io" class="link-light">Source</a>
+    </nav>
 </body>
 
 </html>
